kubernetes/core-components/longhorn/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
spec:
  entryPoints:
    - websecure
  ingressClassName: traefik-internal
  routes:
    - match: Host(`longhorn.home.lungoo.de`)
      kind: Rule
      middlewares:
        - name: forwardauth
          namespace: authelia
      services:
        - name: longhorn-frontend
          port: 80
